[package]
name = "pokelib"
version = "0.1.0"
edition = "2021"

repository = "https://github.com/zliebersbach/pokelib"
readme = "README.md"
licence = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.24.1"
eframe = { version = "0.24.1", default-features = false, features = [
    "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    #"persistence",   # Enable restoring app state when restarting the app.
] }
egui_extras = { version = "0.24.1", features = ["all_loaders"] }
env_logger = { version = "0.10", default-features = false, features = [
    "auto-color",
    "humantime",
] }

tokio = { version = "1", features = ["full"] }
pretty_env_logger = "0.5"
rustemon = "3.3.0"
futures = "0.3.30"
